--- a/webMetics/Views/Participante/VerParticipantes.cshtml
+++ b/webMetics/Views/Participante/VerParticipantes.cshtml
@@ -63,13 +63,13 @@
 
                 <div class="d-flex justify-content-end">
                     <div class="mx-1">
-                        @Html.ActionLink("   PDF", "ExportarParticipantesPDF", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                        @Html.ActionLink("   PDF", "ExportarParticipantesPDF", "Participante", new { searchTerm = Context.Request.Query["searchTerm"] }, new { @class = "btn btn-outline-secondary bi bi-download" })
                     </div>
                     <div class="mx-1">
-                        @Html.ActionLink("   Excel", "ExportarParticipantesExcel", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                        @Html.ActionLink("   Excel", "ExportarParticipantesExcel", "Participante", new { searchTerm = Context.Request.Query["searchTerm"] }, new { @class = "btn btn-outline-secondary bi bi-download" })
                     </div>
                     <div class="mx-1">
-                        @Html.ActionLink("   Word", "ExportarParticipantesWord", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                        @Html.ActionLink("   Word", "ExportarParticipantesWord", "Participante", new { searchTerm = Context.Request.Query["searchTerm"] }, new { @class = "btn btn-outline-secondary bi bi-download" })
                     </div>
                     <div class="mx-1">
                         @Html.ActionLink("   Agregar", "FormularioParticipante", "Participante", new { }, new { @class = "btn btn-primary bi bi-person-plus" })
