Added cache functionality and refresh functionality

--- a/webMetics/Views/Participante/VerParticipantesPorModulos.cshtml
+++ b/webMetics/Views/Participante/VerParticipantesPorModulos.cshtml
@@ -81,20 +81,33 @@
             <br />
             @if (ViewBag.ListaInscripciones == null)
             {
+
                 <h5 class="text-center">No hay personas inscritas en módulos.</h5>
+
+                <div class="d-flex justify-content-between align-items-center mt-2 mb-4">
+                    <form id="refreshForm" method="post" action="@Url.Action("CargarParticipantesPorModulos", "Participante")" class="text-center w-100">
+                        <button type="submit" class="btn btn-secondary" id="refreshButton">
+                            Recargar datos
+                        </button>
+                    </form>
+                </div>
             }
             else
             {
                 <div class="d-flex justify-content-between align-items-center mt-2 mb-4">
-                    <div class="w-100">
-                        <!-- Barra de búsqueda -->
+                    <form id="refreshForm" method="post" action="@Url.Action("CargarParticipantesPorModulos", "Participante")">
+                        <button type="submit" class="btn btn-secondary" id="refreshButton">
+                            <i class="bi bi-arrow-clockwise"></i>
+                        </button>
+                    </form>
+
+                    <div class="w-100 ms-3">
                         <form asp-action="BuscarParticipantesPorModulos" asp-controller="Participante" method="get" class="input-group">
                             <input type="text" name="searchTerm" class="form-control" placeholder="Buscar participante" value="@Context.Request.Query["searchTerm"]" />
                             <button class="btn btn-secondary" type="submit"><i class="bi bi-search"></i></button>
                         </form>
                     </div>
                 </div>
-
                 <table class="table table-striped" id="tblCustomers">
                     <thead>
                         <tr>
@@ -193,5 +206,11 @@ else
             url: '//cdn.datatables.net/plug-ins/2.1.7/i18n/es-ES.json',
         },
         "searching": false
+    });
+</script>
+<script>
+    document.getElementById('refreshButton').addEventListener('click', function (event) {
+        event.preventDefault();
+        document.getElementById('refreshForm').submit(); // Trigger the form submission
     });
 </script>
