--- a/webMetics/Views/Inscripcion/VerInscripciones.cshtml
+++ b/webMetics/Views/Inscripcion/VerInscripciones.cshtml
@@ -39,7 +39,7 @@
 
             <div class="d-flex justify-content-between">
                 <div class="mb-3" style="width: 70%;">
-                    @using (Html.BeginForm("SubirArchivoExcelParticipantesPorModulos", "Participante", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                    @using (Html.BeginForm("SubirArchivoExcelInscripciones", "Inscripcion", FormMethod.Post, new { enctype = "multipart/form-data" }))
                     {
                         <form>
                             <small class="ms-1 text-secondary">Subir lista de participantes</small>
@@ -56,7 +56,7 @@
                             <br />
                             Correo Institucional, Módulo, Grupo, Horas, Estado, Horas Completadas
                             <br />
-                            @Html.ActionLink("Descargar plantilla", "DescargarPlantillaSubirParticipantesPorModulos", "Participante", new { }, new { @class = "btn btn-small btn-outline-secondary mt-2" })
+                            @Html.ActionLink("Descargar plantilla", "DescargarPlantillaSubirInscripciones", "Inscripcion", new { }, new { @class = "btn btn-small btn-outline-secondary mt-2" })
                         </small>
                     </div>
                 </div>
@@ -88,8 +88,8 @@
                 <div class="d-flex justify-content-between align-items-center mt-2 mb-4">
                     <div class="w-100">
                         <!-- Barra de búsqueda -->
-                        <form asp-action="BuscarParticipantesPorModulos" asp-controller="Participante" method="get" class="input-group">
-                            <input type="text" name="searchTerm" class="form-control" placeholder="Buscar participante" value="@Context.Request.Query["searchTerm"]" />
+                        <form asp-action="BuscarInscripciones" asp-controller="Inscripcion" method="get" class="input-group">
+                            <input type="text" name="searchTerm" class="form-control" placeholder="Buscar inscripción" value="@Context.Request.Query["searchTerm"]" />
                             <button class="btn btn-secondary" type="submit"><i class="bi bi-search"></i></button>
                         </form>
                     </div>
