Cambio de título

--- a/webMetics/Views/Inscripcion/VerInscripciones.cshtml
+++ b/webMetics/Views/Inscripcion/VerInscripciones.cshtml
@@ -42,7 +42,7 @@
                     @using (Html.BeginForm("SubirArchivoExcelInscripciones", "Inscripcion", FormMethod.Post, new { enctype = "multipart/form-data" }))
                     {
                         <form>
-                            <small class="ms-1 text-secondary">Subir lista de participantes</small>
+                            <small class="ms-1 text-secondary">Subir lista de inscripciones</small>
                             <div class="mb-2 d-flex align-items-center">
                                 <input type="file" class="form-control" name="file" id="file" accept=".xls,.xlsx" style="max-width: 500px;" required>
                                 <input class="btn btn-secondary ms-2" type="submit" value="Subir archivo">
