--- a/webMetics/Views/Participante/VerDatosParticipante.cshtml
+++ b/webMetics/Views/Participante/VerDatosParticipante.cshtml
@@ -11,7 +11,7 @@
         @if (urlReferrer != null)
         {
             <div class="d-flex justify-content-start mb-3">
-                <a class="text-dark fs-4" onclick="history.go(-1); return false;" href="#">
+                <a class="text-dark fs-4" href="@Url.Action("VerInscripciones", "Inscripcion")">
                     <i class="bi bi-arrow-left"></i>
                 </a>
             </div>
@@ -203,8 +203,8 @@
                 </table>
             }
             <hr />
-            <div class="d-flex justify-content-center my-4">
-                <a href="#" class="btn btn-primary btn-block" onclick="history.go(-1); return false;">Regresar</a>
+            <div class="col-auto">
+                <a href="@Url.Action("VerInscripciones", "Inscripcion")" class="btn btn-secondary btn-block">Regresar</a>
             </div>
         </div>
     </div>
