--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -131,7 +131,7 @@
                                         @if (!string.IsNullOrEmpty(grupo.enlace))
                                         {
                                             <div class="card-text mb-3">
-                                                <strong><a href="@grupo.enlace" target="_blank">Enlace del curso</a></strong>
+                                                <strong><a href="@grupo.enlace" target="_blank">Enlace de Mediación Virtual</a></strong>
                                             </div>
                                         }
 
@@ -292,7 +292,7 @@
                                                 @if (!string.IsNullOrEmpty(grupo.enlace))
                                                 {
                                                     <div class="card-text mb-3">
-                                                        <strong><a href="@grupo.enlace" target="_blank">Enlace del curso</a></strong>
+                                                            <strong><a href="@grupo.enlace" target="_blank">Enlace de Mediación Virtual</a></strong>
                                                     </div>
                                                 }
 
@@ -480,7 +480,7 @@
                                 @if (!string.IsNullOrEmpty(grupo.enlace))
                                 {
                                     <div class="card-text mb-3">
-                                        <strong><a href="@grupo.enlace" target="_blank">Enlace del curso</a></strong>
+                                                <strong><a href="@grupo.enlace" target="_blank">Enlace de Mediación Virtual</a></strong>
                                     </div>
                                 }
 
@@ -699,7 +699,7 @@
                                                 @if (!string.IsNullOrEmpty(grupo.enlace))
                                                 {
                                                     <div class="card-text mb-3">
-                                                        <strong><a href="@grupo.enlace" target="_blank">Enlace del curso</a></strong>
+                                                        <strong><a href="@grupo.enlace" target="_blank">Enlace de Mediación Virtual</a></strong>
                                                     </div>
                                                 }
 
