--- a/webMetics/Views/Participante/EditarParticipante.cshtml
+++ b/webMetics/Views/Participante/EditarParticipante.cshtml
@@ -74,9 +74,9 @@
                                 @Html.ValidationMessageFor(participanteModel => participanteModel.tipoIdentificacion, "", new { @class = "text-danger" })
                             </div>
                             <div class="col">
-                                @Html.LabelFor(usuarioModel => usuarioModel.numeroIdentificacion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                                @Html.TextBoxFor(usuarioModel => usuarioModel.numeroIdentificacion, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
-                                @Html.ValidationMessageFor(usuarioModel => usuarioModel.numeroIdentificacion, "", new { @class = "text-danger" })
+                                @Html.LabelFor(participanteModel => participanteModel.numeroIdentificacion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                                @Html.TextBoxFor(participanteModel => participanteModel.numeroIdentificacion, new { @class = "form-control", @maxlength = "64", @autocomplete = "off" })
+                                @Html.ValidationMessageFor(participanteModel => participanteModel.numeroIdentificacion, "", new { @class = "text-danger" })
                                 <small class="form-text text-muted">
                                     Formato de cédula: 1-1100-1100 (con guiones)
                                 </small>
@@ -88,26 +88,24 @@
                             @Html.ValidationMessageFor(participanteModel => participanteModel.tipoParticipante, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group mt-1">
-                        </div>
-                        <div class="form-group mt-1">
                             @Html.LabelFor(participanteModel => participanteModel.area, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(participanteModel => participanteModel.area, webMetics.Controllers.ParticipanteController.GetAreas(), "Seleccione un área...", new { @class = "form-control", id = "areaDropdown" })
+                            @Html.DropDownListFor(participanteModel => participanteModel.area, new SelectList(ViewData["jsonDataAreas"] as List<string>), "Seleccione un área...", new { @class = "form-control", id = "areaDropdown" })
                             @Html.ValidationMessageFor(participanteModel => participanteModel.area, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group mt-1">
                             @Html.LabelFor(participanteModel => participanteModel.departamento, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(participanteModel => participanteModel.departamento, webMetics.Controllers.ParticipanteController.GetDepartamento(this.Model.area), "Seleccione un departamento...", new { @class = "form-control", id = "departamentoDropdown" })
+                            @Html.DropDownListFor(participanteModel => participanteModel.departamento, new SelectList(Enumerable.Empty<SelectListItem>()), "Seleccione un departamento...", new { @class = "form-control", id = "departamentoDropdown" })
                             @Html.ValidationMessageFor(participanteModel => participanteModel.departamento, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group mt-1">
                             @Html.LabelFor(participanteModel => participanteModel.unidadAcademica, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(participanteModel => participanteModel.unidadAcademica, webMetics.Controllers.ParticipanteController.GetUnidades(this.Model.departamento), "Seleccione una unidad académica...", new { @class = "form-control", id = "seccionDropdown" })
+                            @Html.DropDownListFor(participanteModel => participanteModel.unidadAcademica, new SelectList(Enumerable.Empty<SelectListItem>()), "Seleccione una unidad académica...", new { @class = "form-control", id = "seccionDropdown" })
                             @Html.ValidationMessageFor(participanteModel => participanteModel.unidadAcademica, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group mt-1">
-                            @Html.LabelFor(usuarioModel => usuarioModel.sede, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(usuarioModel => usuarioModel.sede, webMetics.Controllers.ParticipanteController.GetSedes(), "Seleccione una sede y recinto...", new { @class = "form-control" })
-                            @Html.ValidationMessageFor(usuarioModel => usuarioModel.sede, "", new { @class = "text-danger" })
+                            @Html.LabelFor(participanteModel => participanteModel.sede, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
+                            @Html.DropDownListFor(participanteModel => participanteModel.sede, webMetics.Controllers.ParticipanteController.GetSedes(), "Seleccione una sede y recinto...", new { @class = "form-control" })
+                            @Html.ValidationMessageFor(participanteModel => participanteModel.sede, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group mt-1">
                             @Html.LabelFor(participanteModel => participanteModel.telefono, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
@@ -115,14 +113,14 @@
                             @Html.ValidationMessageFor(participanteModel => participanteModel.telefono, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group mt-1">
-                            @Html.LabelFor(usuarioModel => usuarioModel.condicion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a><br />
-                            @Html.RadioButtonFor(usuarioModel => usuarioModel.condicion, "Profesor(a) Interino(a)") @Html.Label("Profesor(a) Interino(a)")<br />
-                            @Html.RadioButtonFor(usuarioModel => usuarioModel.condicion, "Profesor(a) Instructor(a)") @Html.Label("Profesor(a) Instructor(a)")<br />
-                            @Html.RadioButtonFor(usuarioModel => usuarioModel.condicion, "Profesor(a) Adjunto(a)") @Html.Label("Profesor(a) Adjunto(a)")<br />
-                            @Html.RadioButtonFor(usuarioModel => usuarioModel.condicion, "Profesor(a) Catedrático(a)") @Html.Label("Profesor(a) Catedrático(a)")<br />
-                            @Html.RadioButtonFor(usuarioModel => usuarioModel.condicion, "Profesor(a) Invitado(a)") @Html.Label("Profesor(a) Invitado(a)")<br />
-                            @Html.RadioButtonFor(usuarioModel => usuarioModel.condicion, "Otro") @Html.Label("Otro")<br />
-                            @Html.ValidationMessageFor(usuarioModel => usuarioModel.condicion, "", new { @class = "text-danger" })
+                            @Html.LabelFor(participanteModel => participanteModel.condicion, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a><br />
+                            @Html.RadioButtonFor(participanteModel => participanteModel.condicion, "Profesor(a) Interino(a)") @Html.Label("Profesor(a) Interino(a)")<br />
+                            @Html.RadioButtonFor(participanteModel => participanteModel.condicion, "Profesor(a) Instructor(a)") @Html.Label("Profesor(a) Instructor(a)")<br />
+                            @Html.RadioButtonFor(participanteModel => participanteModel.condicion, "Profesor(a) Adjunto(a)") @Html.Label("Profesor(a) Adjunto(a)")<br />
+                            @Html.RadioButtonFor(participanteModel => participanteModel.condicion, "Profesor(a) Catedrático(a)") @Html.Label("Profesor(a) Catedrático(a)")<br />
+                            @Html.RadioButtonFor(participanteModel => participanteModel.condicion, "Profesor(a) Invitado(a)") @Html.Label("Profesor(a) Invitado(a)")<br />
+                            @Html.RadioButtonFor(participanteModel => participanteModel.condicion, "Otro") @Html.Label("Otro")<br />
+                            @Html.ValidationMessageFor(participanteModel => participanteModel.condicion, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="row justify-content-center m-4">
@@ -147,86 +145,94 @@ else
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
 
+        // Handle change event of area dropdown
+        $('#areaDropdown').click(function () {
+            var areaName = $(this).val();
 
-<script>
-    // Handle change event of area dropdown
-    $('#areaDropdown').click(function () {
-        // Clear departamento and unidadAcademica dropdowns
-        $('#departamentoDropdown').empty().append('<option value="">Seleccione un departamento...</option>');
-        $('#seccionDropdown').empty().append('<option value="">Selecciona una unidad académica...</option>');
+            // Clear departamento and unidadAcademica dropdowns
+            $('#departamentoDropdown').empty().append('<option value="">Seleccione un departamento...</option>');
+            $('#seccionDropdown').empty().append('<option value="">Seleccione una unidad académica...</option>');
 
-        $('#departamentoDropdown').empty().append('<option value="">Seleccione un departamento...</option>');
-        $.ajax({
-            url: '/Participante/GetDepartamentosByArea',
-            type: 'GET',
-            data: { areaName: areaName },
-            dataType: 'json',
-            success: function (data) {
-                // Update departamento dropdown with fetched data
-                $.each(data, function (index, value) {
-                    $('#departamentoDropdown').append('<option value="' + value + '">' + value + '</option>');
+            if (areaName !== '') {
+                // Make AJAX request to fetch departamentos for selected area
+                $.ajax({
+                    url: '/Participante/GetDepartamentosByArea',
+                    type: 'GET',
+                    data: { areaName: areaName },
+                    dataType: 'json',
+                    success: function (data) {
+                        // Update departamento dropdown with fetched data
+                        $.each(data, function (index, value) {
+                            $('#departamentoDropdown').append('<option value="' + value + '">' + value + '</option>');
+                        });
+                    },
+                    error: function (xhr, status, error) {
+                        // Handle error
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: 'An error occurred while fetching departamentos: ' + error
+                        });
+                    }
                 });
-            },
-            error: function (xhr, status, error) {
-                // Handle error
-                Swal.fire({
-                    icon: 'error',
-                    title: 'Error',
-                    text: 'An error occurred while fetching departamentos: ' + error
+                // Make AJAX request to fetch secciones for selected departamento
+                $.ajax({
+                    url: '/Participante/GetSeccionesByDepartamento',
+                    type: 'GET',
+                    data: { departamentoName: departamentoName },
+                    dataType: 'json',
+                    success: function (data) {
+                        // Update unidadAcademica dropdown with fetched data
+                        $.each(data, function (index, value) {
+                            $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
+                        });
+                    },
+                    error: function (xhr, status, error) {
+                        // Handle error
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: 'An error occurred while fetching secciones: ' + error
+                        });
+                    }
+                });
+            }
+        });
+
+        // Handle change event of departamento dropdown
+        $('#departamentoDropdown').change(function () {
+            var departamentoName = $(this).val();
+            var areaName = $('#areaDropdown').val();
+
+            // Clear unidadAcademica dropdown
+            $('#seccionDropdown').empty().append('<option value="">Seleccione una unidad académica...</option>');
+
+            if (departamentoName !== '') {
+                // Make AJAX request to fetch secciones for selected departamento
+                $.ajax({
+                    url: '/Participante/GetSeccionesByDepartamento',
+                    type: 'GET',
+                    data: { areaName: areaName, departamentoName: departamentoName },
+                    dataType: 'json',
+                    success: function (data) {
+                        // Update unidadAcademica dropdown with fetched data
+                        $.each(data, function (index, value) {
+                            $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
+                        });
+                    },
+                    error: function (xhr, status, error) {
+                        // Handle error
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: 'An error occurred while fetching secciones: ' + error
+                        });
+                    }
                 });
             }
         });
     });
-</script>
-
-<script>
-
-    // Handle change event of departamento dropdown
-    $('#departamentoDropdown').click(function () {
-        var areaName = $('#areaDropdown').val();
-        $.ajax({
-            url: '/Participante/GetDepartamentosByArea',
-            type: 'GET',
-            data: { areaName: areaName },
-            dataType: 'json',
-            success: function (data) {
-                // Update departamento dropdown with fetched data
-                $.each(data, function (index, value) {
-                    $('#departamentoDropdown').append('<option value="' + value + '">' + value + '</option>');
-                });
-            },
-            error: function (xhr, status, error) {
-                // Handle error
-                Swal.fire({
-                    icon: 'error',
-                    title: 'Error',
-                    text: 'An error occurred while fetching departamentos: ' + error
-                });
-            }
-        });
-        $('#seccionDropdown').empty().append('<option value="">Selecciona una unidad académica...</option>');
-        var departamentoName = $('#departamentoDropdown').val();
-
-        $.ajax({
-            url: '/Participante/GetSeccionesByDepartamento',
-            type: 'GET',
-            data: { areaName: areaName, departamentoName: departamentoName },
-            dataType: 'json',
-            success: function (data) {
-                // Update departamento dropdown with fetched data
-                $.each(data, function (index, value) {
-                    $('#seccionDropdown').append('<option value="' + value + '">' + value + '</option>');
-                });
-            },
-            error: function (xhr, status, error) {
-                // Handle error
-                Swal.fire({
-                    icon: 'error',
-                    title: 'Error',
-                    text: 'An error occurred while fetching departamentos: ' + error
-                });
-            }
-        });
-     });
 </script>
